public/stylesheets/screen.css
@charset "UTF-8";
@import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);
/*bright blue*/
/*#F59C09;*/
.center {
  text-align: center;
}

/*padding styles*/
.pd-top-1 {
  padding-top: 1em;
}

.pd-top-2 {
  padding-top: 2em;
}

.pd-top-3 {
  padding-top: 3em;
}

.pd-top-4 {
  padding-top: 3em;
}

.pd-top-5 {
  padding-top: 3em;
}

.pd-bottom-1 {
  padding-top: 1em;
}

.pd-bottom-2 {
  padding-top: 2em;
}

.pd-bottom-3 {
  padding-top: 3em;
}

.pd-bottom-4 {
  margin-bottom: 3em;
}

.pd-bottom-5 {
  margin-bottom: 3em;
}

.mg-btm-05 {
  margin-bottom: .5em;
}

.mg-btm-1 {
  margin-bottom: 1em;
}

.mg-btm-2 {
  margin-bottom: 2em;
}

.mg-btm-3 {
  margin-bottom: 3em;
}

.mg-btm-4 {
  margin-bottom: 3em;
}

.mg-btm-5 {
  margin-bottom: 3em;
}

.container {
  position: relative;
  margin-top: 6em;
}

.container > section > article > .main section > div {
  width: 80%;
  max-width: 69em;
  margin: 0 auto;
  padding: 2em 1.875em 2em 1.875em;
  /*background: rgba(198, 198, 197, 0.7);*/
}

.container > section > article > .main section > div.white {
  width: 80%;
  max-width: 69em;
  margin: 0 auto;
  padding: 2em 1.875em 2em 1.875em;
  background: #fff;
}

.main > section:nth-child(even) {
  background: #EFF3FF;
}

.main section:first-child > div {
  padding-top: 0em;
}

.main section p {
  margin: 0;
  padding: .5em 0;
  line-height: 1.75;
}

.main section p.first {
  margin: 0;
  padding: .5em 0;
  line-height: 2.5;
}

.main section p.highlights {
  text-align: center;
  padding: 0px 13%;
  color: white;
}

section.anchor {
  padding-top: 123px;
  margin-top: -50px;
}

#releases-page-links > .muted_link {
  color: #D3D3D3;
}

#releases-page-links > .muted_link:hover, #releases-page > .muted_link:focus, #releases-page > .muted_link:active {
  color: #b1b1b1;
}

@media screen and (max-width: 55em) {
  .main section p {
    font-size: 1em;
  }

  .container > section > article > .main section#sec-hardfork {
    padding-top: 123px;
    margin-top: -50px;
  }

  .container > section > article > .main section#sec-takepart {
    padding-top: 123px;
    margin-top: -50px;
  }
}
@media screen and (max-width: 32.25em) {
  .container {
    position: relative;
    margin-top: 4em;
  }

  .container > section > article > .main section#sec-hardfork {
    padding-top: 83px;
  }

  .container > section > article > .main section#sec-takepart {
    padding-top: 83px;
  }
}
@media screen and (max-width: 24em) {
  .container > section > article > .main section > div {
    width: 85%;
    max-width: inherit;
    margin: 0 auto;
    padding: 2em 0em 4em 0em;
  }

  .main section p {
    padding: .5em 0;
  }

  .container > section > article > .main > section#sec-hardfork {
    /*padding-top: 4.875em;*/
  }

  .typography h2, .content h2, section[role=main] > article h2, .content h2, section[role=main] > article h2, section > .main > article h2 {
    margin: 1.75em 0 .45em 0 !important;
  }

  .typography li, .content li, section[role=main] > article li, .content li, section[role=main] > article li, section > .main > article li {
    line-height: 1.75em;
    color: #47a3da;
  }
}
.typography h3.announcement, .content h3.announcement, section[role=main] > article h3.announcement {
  font-weight: 100;
  font-size: 80%;
  line-height: 1.45;
  margin: 1em 0 0.25em;
  color: #666;
  letter-spacing: 1.5px;
}

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font: inherit;
  font-size: 100%;
  vertical-align: baseline;
}

html {
  line-height: 1;
}

ol, ul {
  list-style: none;
}

table {
  border-collapse: collapse;
  border-spacing: 0;
}

caption, th, td {
  text-align: left;
  font-weight: normal;
  vertical-align: middle;
}

q, blockquote {
  quotes: none;
}
q:before, q:after, blockquote:before, blockquote:after {
  content: "";
  content: none;
}

a img {
  border: none;
}

article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
  display: block;
}

article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
  display: block;
}

body {
  background: white;
}

body {
  color: #47a3da;
  font-family: "Helvetica Neue", Hevetica, Arial, sans-serif;
  font-size: 110%;
  line-height: 1.4;
}

.links a:link, .content a:link, section[role=main] > article a:link {
  color: #e76a00;
  text-decoration: none;
}
.links a:visited, .content a:visited, section[role=main] > article a:visited {
  color: #ff7602;
}
.links a:hover, .content a:hover, section[role=main] > article a:hover {
  color: #d36100;
  text-decoration: underline;
}
.links a.more, .content a.more, section[role=main] > article a.more {
  white-space: nowrap;
}
.links a.more:after, .content a.more:after, section[role=main] > article a.more:after {
  content: " »";
}

.typography, .content, section[role=main] > article {
  /*what*/
}
.typography strong, .content strong, section[role=main] > article strong, .typography b, .content b, section[role=main] > article b {
  color: #2a94d3;
  font-weight: 500;
}
.typography em, .content em, section[role=main] > article em, .typography i, .content i, section[role=main] > article i {
  font-style: italic;
}
.typography abbr, .content abbr, section[role=main] > article abbr, .typography acronym, .content acronym, section[role=main] > article acronym {
  border-bottom: 1px dotted #f1f8fc;
}
.typography sub, .content sub, section[role=main] > article sub, .typography sup, .content sup, section[role=main] > article sup {
  font-size: 85%;
}
.typography sub, .content sub, section[role=main] > article sub {
  vertical-align: sub;
}
.typography sup, .content sup, section[role=main] > article sup {
  vertical-align: super;
}
.typography span.caps, .content span.caps, section[role=main] > article span.caps {
  font-size: 95%;
}
.typography h1, .content h1, section[role=main] > article h1, .typography h2, .content h2, section[role=main] > article h2, .typography h3, .content h3, section[role=main] > article h3, .typography h4, .content h4, section[role=main] > article h4, .typography h5, .content h5, section[role=main] > article h5, .typography h6, .content h6, section[role=main] > article h6 {
  color: #2581b9;
  margin: 1em 0;
}
.typography h1, .content h1, section[role=main] > article h1 {
  font-weight: bold;
  font-size: 150%;
  line-height: 1.099;
  margin: 0 1em;
}
.typography h2, .content h2, section[role=main] > article h2 {
  font-weight: bold;
  font-size: 125%;
  line-height: 1.099;
}
.typography h3, .content h3, section[role=main] > article h3 {
  font-weight: bold;
  font-size: 140%;
  line-height: 1.169;
  margin: 1.25em 0 0.5em;
}
.typography h4, .content h4, section[role=main] > article h4 {
  font-weight: bold;
  font-size: 110%;
  line-height: 1.26;
  margin: 0.5em 0 0.5em;
}
.typography h5, .content h5, section[role=main] > article h5 {
  font-style: italic;
  font-size: 110%;
  line-height: 1.4;
  margin: 0.65em 0;
}
.typography h6, .content h6, section[role=main] > article h6 {
  font-weight: bold;
  margin-bottom: -0.75em;
}
.typography p, .content p, section[role=main] > article p {
  margin: .75em 0;
}
.typography ul, .content ul, section[role=main] > article ul, .typography ol, .content ol, section[role=main] > article ol, .typography dl, .content dl, section[role=main] > article dl {
  margin-top: 1em;
  margin-bottom: 1em;
}
.typography ul, .content ul, section[role=main] > article ul, .typography ol, .content ol, section[role=main] > article ol, .typography dd, .content dd, section[role=main] > article dd {
  padding-left: 1em;
}
.typography ul, .content ul, section[role=main] > article ul {
  list-style: disc;
}
.typography ol, .content ol, section[role=main] > article ol {
  list-style: decimal;
}
.typography li, .content li, section[role=main] > article li {
  margin-top: 0.5em;
  margin-bottom: 0.5em;
}
.typography li.on_grey, .content li.on_grey, section[role=main] > article li.on_grey {
  margin-top: 0.5em;
  margin-bottom: 0.5em;
  font-size: .85em;
}
.typography dt, .content dt, section[role=main] > article dt {
  margin-top: 1em;
}
.typography dd, .content dd, section[role=main] > article dd {
  margin-bottom: 1em;
}
.typography code, .content code, section[role=main] > article code, .typography dfn, .content dfn, section[role=main] > article dfn, .typography kbd, .content kbd, section[role=main] > article kbd, .typography samp, .content samp, section[role=main] > article samp, .typography tt, .content tt, section[role=main] > article tt {
  font-family: "Lato", Calibri, Arial, sans-serif;
  font-size: 95%;
  color: #9ccdeb;
}
.typography pre, .content pre, section[role=main] > article pre {
  background: #9ccdeb;
  color: #b85c25;
  font-family: "Lato", Calibri, Arial, sans-serif;
  font-size: 95%;
  line-height: 1.4;
  margin: 1.5em 0;
  padding: 1em;
  -moz-border-radius: 8px;
  -webkit-border-radius: 8px;
  border-radius: 8px;
}

.content .box, section[role=main] > article .box {
  background: #efeacf;
  border: 1px solid #e2d9a9;
  -moz-border-radius: 8px;
  -webkit-border-radius: 8px;
  border-radius: 8px;
  margin: 1.5em -1em;
  padding: 1px 1em;
}

header[role=banner] {
  padding: 0px 0%;
  position: relative;
}
header[role=banner] a:link {
  color: white;
  text-decoration: none;
}
header[role=banner] a:visited {
  color: white;
}
header[role=banner] a:hover {
  color: #e9e516;
  text-decoration: underline;
}
header[role=banner] .action-link {
  position: absolute;
  right: 0%;
  top: 55px;
}
header[role=banner] .action-link a {
  background: rgba(255, 255, 255, 0.1);
  -moz-border-radius: 8px;
  -webkit-border-radius: 8px;
  border-radius: 8px;
  display: block;
  padding: 0.5em 1em;
  text-shadow: gray 0 1px 0;
}
header[role=banner] .action-link a:after {
  content: " ⇢";
}

section[role=main] {
  padding: 0px 0%;
  box-sizing: border-box;
}

footer {
  padding: 0 0% 50px;
  font-size: 90%;
  color: #c6e3f4;
  background-color: #ef7220;
}
footer a:link {
  color: #47a3da;
  text-decoration: none;
}
footer a:visited {
  color: #47a3da;
}
footer a:hover {
  color: #47a3da;
  text-decoration: underline;
}
footer p {
  margin: 1em 0em;
  padding: 1.5em 1em;
}

